<resources>
    <string name="app_name">Behetem</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="privacy_terms">Условия конфиденциальности</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="ok">OK</string>
    <string name="cancel">Отменить</string>
    <string name="register_now">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="hello_you">Здравствуйте, вы:</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="further">Далее</string>
    <string name="whats_your_name">Как вас зовут?</string>
    <string name="name">Имя</string>
    <string name="your_dob">Дата вашего рождения</string>
    <string name="date_one">01</string>
    <string name="january">Январь</string>
    <string name="year_1990">1990</string>
    <string name="who_are_you_looking_for">Кого вы ищите?</string>
    <string name="add_photo">Добавьте фото</string>
    <string name="choose_from_3_to_6_photo">Выберите от 3 до 6 фотографий</string>
    <string name="coins">Монеты</string>
    <string name="premium">Премиум</string>
    <string name="belimite_reactions">Белимитные реакции</string>
    <string name="send_unlimited_reactions">Отправляй безграничное количество реакций</string>
    <string name="months">месяцев</string>
    <string name="month">месяц</string>
    <string name="str_continue">Продолжить</string>
    <string name="coins_2">Монет</string>
    <string name="p_per_month">р/мес.</string>
    <string name="p_per_month_strike"><strike>р/мес.</strike></string>
    <string name="super_reactions">Супер-реакции</string>
    <string name="get_reactions_with_opportunity">Получи реакции с возможностью написать первым</string>
    <string name="the_main">Основные</string>
    <string name="about_us">О нас</string>
    <string name="help">Помощь</string>
    <string name="feedback">Обратная связь</string>
    <string name="notifications">Уведомления</string>
    <string name="confidentiality">Конфиденциальность</string>
    <string name="version">Версия %s</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="location">Местоположение</string>
    <string name="about_myself">О себе</string>
    <string name="interests">Интересы</string>
    <string name="growth">Рост</string>
    <string name="growth_value">%d, см</string>
    <string name="growth_from_to_value">%1$d-%2$d, см</string>
    <string name="weight">Вес</string>
    <string name="weight_value">%d, кг</string>
    <string name="weight_from_to_value">%1$d-%2$d, кг</string>
    <string name="family_status">Семейное положение</string>
    <string name="family_and_children">Семья и дети</string>
    <string name="a_family">Семья</string>
    <string name="indicate_your_marital_status">Укажите ваше семейное положение</string>
    <string name="single_not_married">Холост/не замужем</string>
    <string name="divorced">Разведен(а)</string>
    <string name="widower">Вдовец(ва)</string>
    <string name="children">Дети</string>
    <string name="indicate_presence_absence_of_children">Укажите наличие\отсутсвие детей</string>
    <string name="not">Нет</string>
    <string name="yes_we_live_together">Есть, живем вместе</string>
    <string name="yes_we_live_separately">Есть, живем порознь</string>
    <string name="the_desire_to_have_children">Желание завести детей</string>
    <string name="yes">Да</string>
    <string name="nationality">Национальность</string>
    <string name="job">Работа</string>
    <string name="education">Образование</string>
    <string name="edit">Редактировать</string>
    <string name="settings">Настройки</string>
    <string name="posts">Сообщения</string>
    <string name="reactions">Реакции</string>
    <string name="all">Все</string>
    <string name="no_messages_yet">У вас еще нет диалогов</string>
    <string name="photo">Фото</string>
    <string name="about_me">Обо мне</string>
    <string name="sp">СП</string>
    <string name="pol">Пол</string>
    <string name="actively_looking">В активном поиске</string>
    <string name="its_complicated">Всё сложно</string>
    <string name="married">Женат(а)</string>
    <string name="at_least_18">Вам должно быть больше 24-ти лет</string>
    <string name="my_interests">Мои интересы</string>
    <string name="skip">Пропустить</string>
    <string name="choose_from_1_to_9_items">Выберите от 1 до 9 пунктов</string>
    <string name="where_did_you_study">Где вы учились?</string>
    <string name="power">Степень</string>
    <string name="year_of_issue">Год выпуска</string>
    <string name="position">Должность</string>
    <string name="company">Компания</string>
    <string name="height_weight">Рост, вес</string>
    <string name="tell_us_about_yourself">Расскажите о себе</string>
    <string name="filters">Фильтры</string>
    <string name="i_am_looking_for">Я ищу</string>
    <string name="age">Возраст</string>
    <string name="distance_from_me">Растояние от меня, км</string>
    <string name="max_distance_from_me">Максимальное растояние от меня, км</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="confirm">Подтвердить</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="these_gestures_will_help">Эти жесты помогут вам пользоваться приложением</string>
    <string name="next_photo">Следующее фото</string>
    <string name="the_right_side">Коснитесь правой части экрана</string>
    <string name="previous_photo">Предыдущее фото</string>
    <string name="the_left_side">Коснитесь левой части экрана</string>
    <string name="view_profile">Просмотреть анкету</string>
    <string name="pull_the_page_up">Потяните страницу вверх</string>
    <string name="next_card">Следующая карточка</string>
    <string name="swipe_left">Пролистните влево</string>
    <string name="click_to_continue">Нажмите, чтобы продолжить</string>
    <string name="do_you_want_to_continue">Хотите продолжить?</string>
    <string name="specify_additional_params_to">Укажите дополнительные параметры, чтобы улучшить результаты поиска</string>
    <string name="body_type">Телосложение</string>
    <string name="indicate_your_physique">Укажите ваше телосложение</string>
    <string name="skinny">Худощавое</string>
    <string name="slender">Стройное</string>
    <string name="sports">Спортивное</string>
    <string name="dense">Плотное</string>
    <string name="complete">Полное</string>
    <string name="nationality_title">Националитет</string>
    <string name="indicate_your_nationality">Укажите вашу национальность</string>
    <string name="attitude_to_national_traditions">Отношение к национальным традициям</string>
    <string name="i_dont_know">Не заню</string>
    <string name="i_know_but_i_dont">Знаю, но не соблюдаю</string>
    <string name="i_know_i_want_to_preserve">Знаю, хочу сохранить их и привить своим детям</string>
    <string name="career">Карьера</string>
    <string name="more_options">Больше параметров</string>
    <string name="having_children">Наличие детей</string>
    <string name="children_desire">Желание детей</string>
    <string name="attitude_towards_traditions">Отношение к традициям</string>
    <string name="edit_2">Изменить</string>
    <string name="work_education">Работа, образование</string>
    <string name="growth_weight_value">%1$d см, %2$d кг</string>
    <string name="growth_from_to_value_comma">%1$d-%2$d см,</string>
    <string name="knowledge_of_national_language">Знание национального языка</string>
    <string name="indicate_your_level_of_language_proficiency">Укажите ваш уровень знания языка</string>
    <string name="i_do_not_know">Не заню</string>
    <string name="i_know_some_words">Знаю некоторые слова</string>
    <string name="i_understand_but_cannot_maintain_dialogue">Понимаю, но не могу поддержать диалог</string>
    <string name="i_understand_i_can_maintain_dialogue">Понимаю, могу поддержать диалог</string>
    <string name="i_know_well">Знаю хорошо</string>
    <string name="relation_to_religion">Отношение к религии</string>
    <string name="indicate_your_attitude_to_religion">Укажите ваше отнршение к религии</string>
    <string name="non_believer">Не верующий(ая)</string>
    <string name="believer">Верующий(ая)</string>
    <string name="believer_and_observer_of_canons">Верующий(ая) и соблядающий(ая) каноны</string>
    <string name="more_filters">Больше фильтров</string>
    <string name="general">Общее</string>
    <string name="average">Среднее</string>
    <string name="specialized_secondary">Среднее-специальное</string>
    <string name="unfinished_higher">Незаконченное высшее</string>
    <string name="higher">Высшее</string>
    <string name="to_write_message">Написать сообщение</string>
    <string name="skip_underline"><u>Пропустить</u></string>
    <string name="write_something">Напишите что-нибудь</string>
    <string name="check_activity">Проверить активность</string>
    <string name="oh_no">О нет!</string>
    <string name="reactions_are_over">Реакции закончились</string>
    <string name="buy_additional_or_visit_tomorrow">Купи дополнительные реакции сейчас или заходи в приложение завтра</string>
    <string name="buy_more">Купить еще!</string>
    <string name="moment_of_truth">Момент истины</string>
    <string name="only_with_you">За последние 7 дней пользователь Имя активно общался только с вами!</string>
    <string name="with_other_people">За последние 7 дней пользователь Имя активно общался с %1$d людьми!</string>
    <string name="remaining_x">Осталось: %1$d</string>
    <string name="you_have_reviewed">Вы просмотрели все подходящие анкеты. Попробуйте изменить фильтры или зайдите позже.</string>
    <string name="change_filters">Сменить фильтры</string>
    <string-array name="education_level">
        <item>Степень</item>
        <item>Общее</item> 
        <item>Среднее</item> 
        <item>Среднее-специальное</item> 
        <item>Незаконченное высшее</item> 
        <item>Высшее</item> 
    </string-array>
    <string-array name="family_status_array">
        <item>Холост/не замужем</item> 
        <item>Разведен(а)</item> 
        <item>Вдовец(ва)</item> 
    </string-array>
    <string-array name="children_status_array">
        <item>Нет</item> 
        <item>Есть, живем вместе</item> 
        <item>Есть, живем порознь</item> 
    </string-array>
    <string-array name="children_desire_status_array">
        <item>Да</item> 
        <item>Нет</item> 
    </string-array>
    <string-array name="attitude_array">
        <item>Не заню</item> 
        <item>Знаю, но не соблюдаю</item> 
        <item>Знаю, хочу сохранить их и привить своим детям</item> 
    </string-array>
    <string-array name="body_type_array">
        <item>Choose</item>
        <item>Худощавое</item> 
        <item>Стройное</item> 
        <item>Спортивное</item> 
        <item>Плотное</item> 
        <item>Полное</item> 
    </string-array>
    <string-array name="distance_level">
        <item>Within 10 км</item>
        <item>Within 30 км</item>
        <item>Within 80 км</item>
        <item>Within 150 км</item>
        <item>More than 150 км</item>
    </string-array>
    <string name="could_not_parse">Oh, could not parse response. Please try again later.</string>
    <string name="no_internet">No internet connection. Please check your network settings and try again.</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="enter_email">Please enter Email</string>
    <string name="enter_valid_email">Please enter a valid Email</string>
</resources>