<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.FamilyStatusActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ru.behetem.viewmodels.FamilyStatusViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewModel::backPressed}"
                    android:padding="@dimen/mediumPadding"
                    android:src="@drawable/back" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/family_and_children"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/largeTextSize" />

                <!--<androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/smallMargin"
                    android:onClick="@{viewModel::moveFurther}"
                    android:text="@string/skip"
                    android:textColor="@color/lightTextColor"
                    android:textSize="@dimen/smallTextSize" />-->
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/lineHeight"
                    android:layout_weight="0.8"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/lineHeight"
                    android:layout_weight="0.2"
                    android:background="@color/lightGreyColor" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:text="@string/a_family"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/largeTextSize"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/smallMargin"
                        android:text="@string/indicate_your_marital_status"
                        android:textColor="@color/lightTextColor"
                        android:textSize="@dimen/mediumTextSize" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xLargeMargin"
                        android:layout_marginTop="@dimen/normalMargin"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/single_not_married"
                            android:textColor="@color/textColor" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normalMargin"
                            android:text="@string/divorced"
                            android:textColor="@color/textColor" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normalMargin"
                            android:text="@string/widower"
                            android:textColor="@color/textColor" />
                    </RadioGroup>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:text="@string/children"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/largeTextSize"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/smallMargin"
                        android:text="@string/indicate_presence_absence_of_children"
                        android:textColor="@color/lightTextColor"
                        android:textSize="@dimen/mediumTextSize" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xLargeMargin"
                        android:layout_marginTop="@dimen/normalMargin"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not"
                            android:textColor="@color/textColor" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normalMargin"
                            android:text="@string/yes_we_live_together"
                            android:textColor="@color/textColor" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normalMargin"
                            android:text="@string/yes_we_live_separately"
                            android:textColor="@color/textColor" />
                    </RadioGroup>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/xLargeMargin"
                        android:layout_marginTop="@dimen/xLargeMargin"
                        android:layout_marginBottom="@dimen/normalMargin"
                        android:background="@drawable/round_button_background"
                        android:onClick="@{viewModel::moveFurther}"
                        android:text="@string/further"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <include
            layout="@layout/common_loader"
            app:isVisible="@{viewModel.loaderVisible}" />
    </RelativeLayout>
</layout>